service statistics swagger api
